--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,23 @@
 language: python
-python:
-- '3.4'
-- '3.5'
-- '3.6'
-- '3.7'
-- '3.8-dev'
+cache: pip
+matrix:
+  include:
+    #- python: 3.4
+    - python: 3.5
+    - python: 3.6
+    - python: 3.7
+      dist: xenial
+      sudo: true
+    - python: 3.8-dev
+      dist: xenial
+      sudo: true
+    - python: nightly
+      dist: xenial
+      sudo: true
+    - python: pypy3  # 3.5.3  pip  9.0.1
+  allow_failures:
+    - python: 3.8-dev
+    - python: nightly
 install:
 - pip install -r requirements-dev.txt
 script:
