--- a/.travis.yml
+++ b/.travis.yml
@@ -2,12 +2,13 @@ language: python
 cache: pip
 matrix:
   include:
-    - python: 3.4
-    - python: 3.5
-    - python: 3.6
     - python: 3.7
       dist: xenial
       sudo: true
+      script: pytest && codecov
+    - python: 3.4
+    - python: 3.5
+    - python: 3.6
     - python: 3.8-dev
       dist: xenial
       sudo: true
