--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ matrix:
     - python: 3.7
       dist: xenial
       sudo: true
-      script: pytest && codecov
+      script: python setup.py test && codecov
     - python: 3.4
     - python: 3.5
     - python: 3.6
@@ -22,4 +22,4 @@ matrix:
 install:
 - pip install -r requirements-dev.txt
 script:
-- pytest
+- python setup.py test
